Core-module refactoring