@@ -2,8 +2,6 @@ package space.br1440.platform.tracing.core.span;
 
 import io.opentelemetry.api.trace.Span;
 import io.opentelemetry.api.trace.Tracer;
-import space.br1440.platform.tracing.core.exception.ExceptionRecorder;
-import space.br1440.platform.tracing.core.impl.DefaultTracingImplementation;
 import io.opentelemetry.context.Scope;
 import io.opentelemetry.sdk.OpenTelemetrySdk;
 import io.opentelemetry.sdk.testing.exporter.InMemorySpanExporter;
@@ -13,13 +11,12 @@ import io.opentelemetry.sdk.trace.export.SimpleSpanProcessor;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-
 import space.br1440.platform.tracing.api.semconv.SemconvKeys;
-import space.br1440.platform.tracing.api.span.SpanResult;
-import space.br1440.platform.tracing.api.span.SpanScope;
 import space.br1440.platform.tracing.api.span.SpanCategory;
-import space.br1440.platform.tracing.core.DefaultPlatformTracing;
-import space.br1440.platform.tracing.core.semconv.AttributePolicy;
+import space.br1440.platform.tracing.api.span.SpanResult;
+import space.br1440.platform.tracing.core.enrichment.SpanEnricher;
+import space.br1440.platform.tracing.core.facade.DefaultPlatformTracing;
+import space.br1440.platform.tracing.core.semconv.policy.AttributePolicy;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -63,25 +60,21 @@ class SpanEnricherTest {
         assertThat(data.getAttributes().get(SemconvKeys.PLATFORM_REQUEST_ID)).isEqualTo("req-1");
         assertThat(data.getAttributes().get(SemconvKeys.PLATFORM_USER_HASH)).isEqualTo("u-hash");
         assertThat(data.getAttributes().get(SemconvKeys.PLATFORM_RESULT)).isEqualTo("success");
-        // businessTag нормализован: "Order Type" -> platform.business.order_type
         assertThat(data.getAttributes()
                 .get(io.opentelemetry.api.common.AttributeKey.stringKey("platform.business.order_type")))
                 .isEqualTo("premium");
     }
 
     @Test
-    void enrichCurrentSpanIfPlatformCategory_сМаркером_применяетAllowlistИОтбрасываетChужие() {
+    void enrichCurrentSpanIfPlatformCategory_сV3Маркером_применяетAllowlistИОтбрасываетChужие() {
         DefaultPlatformTracing tracing = new DefaultPlatformTracing(sdk);
-        Tracer tracer = sdk.getTracer(DefaultTracingImplementation.INSTRUMENTATION_NAME);
-        try (SpanScope ignored = new InternalSpanBuilderImpl(tracer, new AttributePolicy(),
-                space.br1440.platform.tracing.core.exception.ExceptionRecorder.secureDefault())
-                .name("op").start()) {
+        try (var ignored = tracing.manual().operation("op").start()) {
             enricher.enrichCurrentSpanIfPlatformCategory(SpanCategory.INTERNAL, scope -> scope
-                    .attribute(SemconvKeys.PLATFORM_REQUEST_ID, "r1")        // в allowlist INTERNAL
-                    .attribute(SemconvKeys.HTTP_ROUTE, "/secret/path"));     // вне allowlist -> drop
+                    .attribute(SemconvKeys.PLATFORM_REQUEST_ID, "r1")
+                    .attribute(SemconvKeys.HTTP_ROUTE, "/secret/path"));
         }
 
-        SpanData data = exporter.getFinishedSpanItems().get(0);
+        SpanData data = exporter.getFinishedSpanItems().getFirst();
         assertThat(data.getAttributes().get(SemconvKeys.PLATFORM_REQUEST_ID)).isEqualTo("r1");
         assertThat(data.getAttributes().get(SemconvKeys.HTTP_ROUTE)).isNull();
     }
@@ -97,13 +90,12 @@ class SpanEnricherTest {
             span.end();
         }
 
-        SpanData data = exporter.getFinishedSpanItems().get(0);
+        SpanData data = exporter.getFinishedSpanItems().getFirst();
         assertThat(data.getAttributes().get(SemconvKeys.PLATFORM_REQUEST_ID)).isNull();
     }
 
     @Test
     void enrichCurrentSpan_безАктивногоSpan_noOp() {
-        // вне span'а — не бросает и ничего не экспортирует
         enricher.enrichCurrentSpan(scope -> scope.requestId("x"));
         assertThat(exporter.getFinishedSpanItems()).isEmpty();
     }
